fixed img not showing

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ nav .nav_id ul li a{
 	
 }
 .bg-image-hero{
-	background-image: url('../img/bg.jpeg');
+	background-image: url('/img/bg.jpeg');
 	width: 100%;
 	height: 100%;
 	background-position: center;
